fixed project alignment issue

--- a/src/less/projects/projects.less
+++ b/src/less/projects/projects.less
@@ -96,8 +96,9 @@
 	#featuredContainer{
 		display: flex;
 		flex-direction: row;
-		width: 100%;
+		width: calc(100% + 40px);
 		flex-wrap: wrap;
+		margin-left: -20px;
 	}
 
 	#projectIcons{
